# pcl-rustic

./: .buildinfo  .cirun.yml  .gitattributes  .gitignore  .pre-commit-config.yaml  Cargo.toml  DOCUMENTATION.md  PYTHON_API.md  README.md  genindex.html  index.html  justfile  mkdocs.yml  objects.inv  py-modindex.html  pyproject.toml  pytest.ini  search.html  searchindex.js  verify_structure.sh
.cargo/: config.toml
.github/workflows/: benchmark.yml  cirun-cpu.yml  cirun-gpu.yml  copilot-setup-steps.yml  docs.yml  pre-commit.yml  release.yml  test-gpu.yml  test.yml
_modules/: index.html
_sources/: index.rst.txt
ai_doc/: CHECKLIST.md  CI_SETUP.md  COMPLETION_NOTICE.md  DELIVERY_CHECKLIST.md  DEVELOPMENT.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  PROJECT_SUMMARY.md  QUICKREF.md  README.md
api/: index.html
crates/pcl_rustic_core/: Cargo.toml
crates/pcl_rustic_core/src/: lib.rs  point.rs  point_cloud.rs
crates/pcl_rustic_pybind/: Cargo.toml
crates/pcl_rustic_pybind/src/: lib.rs
docs/: README.md  index.md
docs/api/: downsample.md  io.md  overview.md  pointcloud.md  transform.md
docs/development/: contributing.md  setup.md
docs/getting-started/: basic-usage.md  examples.md  installation.md
docs/performance/: benchmarks.md  optimization.md
docs/source/: conf.py
docs/source/api/: index.rst
docs/source/examples/: index.rst
examples/: basic_usage.py  index.html
python/pcl_rustic/: __init__.py  __init__.pyi
src/: lib.rs
src/interop/: mod.rs  numpy.rs
src/io/: csv.rs  las_laz.rs  mod.rs  parquet.rs  table.rs
src/pcl_rustic/: __init__.py  _core.pyi
src/point_cloud/: attributes.rs  core.rs  mod.rs  transform.rs  voxel.rs
src/traits/: downsample.rs  io.rs  mod.rs  point_cloud.rs  transform.rs
src/utils/: error.rs  mod.rs  reflect.rs  tensor.rs
tests/: conftest.py  test_benchmark.py  test_point_cloud.py
