[package]
name = "pcl_rustic"
version = "0.1.0"
edition = "2024"

[lib]
name = "_core"
# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib"]

[dependencies]
burn = { version = "0.20.1", features = ["std", "tui", "train", "vision", "wgpu", "fusion","tch"] }
las = { version = "0.9.9", features = ["laz-parallel"] }
parquet = "57.2.0"
# "extension-module" tells pyo3 we want to build an extension module (skips linking against libpython.so)
# "abi3-py39" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.9
pyo3 = { version = "0.27.1", features = ["extension-module", "abi3-py39"] }
thiserror = "2.0.18"
