[package]
name = "pcl_rustic"
version = "0.1.0"
edition = "2021"
authors = ["liuzhen19 <liuzhen19@xiaomi.com>"]

[lib]
name = "_core"
# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib"]

[dependencies]
# Core tensor computation
burn = { version = "0.20.1", features = ["std", "wgpu","ndarray","candle"] }
ndarray = "^0.17"

# File I/O
las = { version = "0.9.9", features = ["laz-parallel"] }
parquet = { version = "^57.2.0", features = ["arrow"] }
arrow = "^57.2.0"
csv = "^1.3"
polars = { version = "^0.52.0", features = ["csv", "parquet"] }

# NumPy interop
numpy = "^0.27"
# Python bindings
pyo3 = { version = "^0.27", features = ["extension-module", "abi3-py39"] }

# Error handling
thiserror = "^2.0"
anyhow = "^1.0"

# Utilities
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
log = "^0.4"
rayon = "^1.10"
