[project]
name = "pcl-rustic"
version = "0.1.0"
description = "高性能Python点云运算库 - 基于Rust burn张量的批量运算"
readme = "ai_doc/README.md"
authors = [
    { name = "liuzhen19", email = "liuzhen19@xiaomi.com" }
]
requires-python = ">=3.10"
dependencies = [
    "loguru>=0.7.3",
    "numpy>=2.0.0",
]



[tool.maturin]
module-name = "pcl_rustic._core"
python-packages = ["pcl_rustic"]
python-source = "src"
features = ["pyo3/extension-module"]

[tool.uv]
cache-keys = [{ file = "pyproject.toml" }, { file = "src/**/*.rs" }, { file = "Cargo.toml" }, { file = "Cargo.lock" }]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[dependency-groups]
dev = [
    "loguru>=0.7.3",
    "pytest>=8.4.2",
]
docs = [
    "mkdocs-material>=9.5.0",
    "mkdocs-git-revision-date-localized-plugin>=1.2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"
